@@ -1,3 +1,8 @@
+2008-06-13  Eric Belanger  <eric@archlinux.org>
+
+	* fontforge 20080607-1
+	* Upstream update
+
 2008-05-09  Eric Belanger  <eric@archlinux.org>
 
 	* fontforge 20080429-1
